# SchemaBind

./: .env.example  .gitignore  README.md  demo.py  main.py  pyproject.toml
samples/csv/: contact_fields.csv  customer.csv  orders.csv  product.csv  weird_names.csv
schemabind/: __init__.py  core.py
tests/: test_core.py
